支持apache服务器，将所有功能与网页路径改为相对路径

--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ DB_NAME=starter
 DB_USERNAME=root
 DB_PASS=
 
+# LLM API settings
+LLM_API_KEY="sk-cfa070aac29141ac889edf44f8c84b21"
+LLM_API_URL="https://api.deepseek.com/v1/chat/completions"
