--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
             "App\\Controllers\\": "app/controllers/",
             "Database\\Migrations\\": "database/migrations/",
             "Utils\\": "utils/"
-        }
+        },
+        "files": [
+            "utils/helpers.php"
+        ]
     }
 }
