--- a/.env
+++ b/.env
@@ -9,3 +9,9 @@ DB_PASS=
 # LLM API settings
 LLM_API_KEY="sk-cfa070aac29141ac889edf44f8c84b21"
 LLM_API_URL="https://api.deepseek.com/v1/chat/completions"
+
+# ChromaDB Knowledge Base Service settings
+CHROMA_PYTHON_PATH="/home/wkd/miniconda3/envs/py39/bin/python"
+CHROMA_SERVICE_HOST="127.0.0.1"
+CHROMA_SERVICE_PORT="4001"
+CHROMA_MAX_FILE_SIZE="2"
